<resources>
    <string name="navigate_unlock">Unlock</string>
    <string name="keys">Keys</string>
    <string name="authorization">Authority</string>
    <string name="setting">Setting</string>

    <string name="app_lable">Elocker</string>
    <string name="lastOpen">LastOpen:</string>
    <string name="locker_detail_activity_name">Locker Detail</string>
    <string name="time_picker_activity_name">Select Time</string>
    <string name="serial">Serial</string>
    <string name="hwType">type</string>
    <string name="toggleTimes">toggleTimes</string>
    <string name="lockerDescription">Name</string>
    <string name="network_error">Please check network connectivity</string>

    <string name="create_time">Create Time</string>

    <string name="phone">Account</string>

    <string name="yes">Confirm</string>
    <string name="transfer_to">Transfer To</string>
    <string name="authorize_to">Authorize TO</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="available_time">Available Time</string>
    <string name="description">Description</string>
    <string name="whole_day">Whole Day</string>
    <string name="custom">Custom</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="available_day_of_week">Avalible Day</string>
    <string name="every_day">Every Day</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="to_acount">acount to authrize to</string>
    <string name="click_to_select">Click to select</string>
    <string name="authorize_from">Authorize From</string>
    <string name="detail">Details</string>
    <string name="delete">Delete</string>
    <!-- Strings related to login -->
    <string name="input_username">Please input username</string>
    <string name="input_passwd">Please input password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_pass">Forget Password</string>
    <string name="empty_username">Username can not be empty</string>
    <string name="empty_passwd">Password can not be empty</string>
    <string name="incorrect_login_info">Password is incorrect or username not exsist</string>
    <string name="internal_error">Internal Error</string>
    <string name="login_too_frequently">Username or password wrong for too many times, please login later</string>
    <string name="update">Update</string>
    <string name="feedback">Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="change_passwd">Change password</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="submit">Submit</string>
    <string name="old_pass">Old password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm pass</string>
    <string name="input_old_pass">Please input old password</string>
    <string name="input_new_password">Please input new password</string>
    <string name="input_new_pass_again">Input new password again</string>
    <string name="old_passwd_wrong">Old password is wrong</string>
    <string name="password_mismatch">New password mismatch with confirmed new password</string>
    <string name="change_passwd_success">Change password successfully</string>
    <string name="un_login">Unlogin</string>
    <string name="last_login">Last Login</string>

    <string name="login_ip">Login Address</string>
    <string name="email">Email</string>
    <string name="ip">IP</string>
    <string name="lockers">Lockers</string>
    <string name="unlock">Unlock</string>
    <string name="cu_account">Current Account</string>
    <string name="add_locker">Add Locker</string>
    <string name="selec_locker">Please select a locker under \"locker\" page</string>
    <string name="open_locker_now">Open Locker now ......</string>
    <string name="scanner_tip">Place QR code into the frame</string>
    <string name="add_locker_success">Add Locker Successfully</string>
    <string name="unknow_serial">Unkown serial</string>
    <string name="failed_to_recognize">Failed to recognize QR code</string>
    <string name="default_locker">New Locker</string>
    <string name="duplicate_serial">The locker is attached to another account already</string>
    <string name="mobile">Mobile</string>
    <string name="require_tag">*</string>
    <string name="input_mobile">Please input mobilephone number</string>
    <string name="password">Password</string>
    <string name="input_pass_again">Please input password again</string>
    <string name="verification_code">Code</string>
    <string name="input_code">Input code here</string>
    <string name="get_code">Click to get code</string>
    <string name="nickname">Nickname</string>
    <string name="input_nick_name">Please input nick name here</string>
    <string name="invalid_phone_num">Invalid phone number，please check again</string>
    <string name="get_register_code_success">Get register code successfully, please take notice of short message later</string>
    <string name="get_register_code_timer">" S later re-get code"</string>
    <string name="reget_register_code">Re-get code</string>
    <string name="incorrect_verification_code">Verification code is incorrect</string>
    <string name="register_success">Register new user successfully</string>
    <string name="phone_num_format_error">Incorrect phone number format</string>
    <string name="password_format_error">Password should contains at least 6 characters</string>
    <string name="code_length_error">Verification code length should be 6</string>
    <string name="code_format_error">Verification code consists of numbers</string>
    <string name="get_verification_code_failed">Failed to get verfication code , please check phone number</string>
    <string name="user_duplicate">The mobile has already registered, please login directly</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_pass_success">Reset password successfully</string>
    <string name="user_not_exsist">The mobile has not registered</string>
    <string name="change_moblie">Change Mobile</string>
    <string name="new_mobile">New Mobile</string>
    <string name="input_new_mobile">Please input new mobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="last_day">Last Day</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="log">Log</string>
    <string name="operation">Operation</string>
    <string name="load_more">Load more</string>
    <string name="no_more_data">No More Data</string>
    <string name="all">All</string>
    <string name="multi_login">The account is logined in other device,please login again</string>
    <string name="log_open_locker">Oper locker</string>
    <string name="scroll_to_load">Scroll to load more data</string>
    <string name="not_support_ble">Sorry, BLE bluetooth is not supported in your device</string>
    <string name="un_authorized_request">Unauthorized request, please login again</string>
    <string name="copy_right">Copyright©2019-2029 Elocker. All rights reserved</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="lockerMenu">　
        <item>Detail</item>
        <item>Edit</item>
        <item>Delete</item>
        <item>Authorization</item>
        <item>Transfer</item>
        <item>Log</item>
    </string-array>
    <string-array name="authorizationMenu">　
        <item>Detail</item>
        <item>Delete</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="lockerDetailItem">　
        <item>Serial</item>
        <item>Type</item>
        <item>AddTime</item>
        <item>LastOpenTime</item>
        <item>toggleTimes</item>
    </string-array>
    <string name="input_feedback">Please input your feedback here</string>
    <string name="power_low">The battery power is low, please replace as soon as possible</string>
    <string name="power_too_low">The battery power is too low,locker will keep open.Please replace battery right now.</string>
    <string name="error_already_started">Blutooth is scannnig now , please try later</string>
    <string name="error_feature_not_support">Hardware does not support the scanning</string>
    <string name="error_app_not_registered">App could not get access to bluetooth</string>

</resources>
