<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_unlock"
        android:icon="@drawable/ic_unlock"
        android:title="@string/navigate_unlock" />

    <item
        android:id="@+id/navigation_lockers"
        android:icon="@drawable/ic_keys"
        android:title="@string/keys" />

    <item
        android:id="@+id/navigation_authorization"
        android:icon="@drawable/ic_authority"
        android:title="@string/authorization" />
    <item
        android:id="@+id/navigation_log"
        android:icon="@drawable/log"
        android:title="@string/log" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />

</menu>
