<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authorization_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="7">

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/lockerDescription"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_locker_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/authorize_from"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_from_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/authorize_to"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_to_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/serial"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/start_date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/end_date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/available_time"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_available_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/available_day_of_week"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_available_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/description"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authorization_detail_descripiton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="45dp" />
</GridLayout>
