<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/locker_detail"
    android:columnCount="2"
    android:rowCount="7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/lockerDescription"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/phone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_detail_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/serial"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_detail_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/hwType"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_detail_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/lastOpen"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_detail_lastopen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/create_time"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_detail_createtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/toggleTimes"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_detail_toggletime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="45dp" />
</GridLayout>
