<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locker_detail"
    android:columnCount="2"
    android:rowCount="7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/lockerDescription"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/locker_modify_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/lockerDescription"
        android:inputType="text"
        android:autofillHints=""
        tools:targetApi="o" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/phone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_modify_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/serial"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_modify_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="@dimen/locker_detail_menu_item_width"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/locker_detail_menu_item_padding"
        android:paddingEnd="@dimen/none_padding"
        android:text="@string/hwType"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locker_modify_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

</GridLayout>